# BaseUtils

./: CMakeLists.txt  README.md
src/: main.c
src/common/: common.c  common.h
src/common/baselib/: baselib.h  gbkuni30.h  libbase.c  libbase.h  liberror.c  liberror.h  libfile.c  libfile.h  libsignal.c  libsignal.h  libstring.c  libstring.h  libtime.c  libtime.h  libutf.c  libutf.h  log.c  log.h  stdtypes.h  uconv.c  uconv.h  units.h  zmalloc.c  zmalloc.h
src/common/configfmt/: cINI.c  cINI.h  cJSON.c  cJSON.h  cXML.c  cXML.h  configfmt.c  configfmt.h
src/common/expand/: expand.c  expand.h
src/common/expand/compress/: compress.c  compress.h
src/common/expand/compress/bz2/: bz2compress.c  bz2compress.h
src/common/expand/compress/lz4/: lz4compress.c  lz4compress.h  lz4lib.h
src/common/expand/compress/lzma/: 7zTypes.h  lzmacompress.c  lzmacompress.h  lzmalib.h
src/common/expand/compress/lzo/: lzocompress.c  lzocompress.h  lzoconf.h  minilzo.c  minilzo.h
src/common/expand/compress/zstd/: zstdcompress.c  zstdcompress.h  zstdlib.h
src/common/expand/openssl/: openssl.h
src/common/expand/openssl/aes/: aes.c  aes.h
src/common/expand/openssl/base64/: base64.c  base64.h
src/common/expand/openssl/crc/: crc.c  crc.h  crc16.c  crc16.h  crc32.c  crc32.h
src/common/expand/openssl/des/: des.c  des.h
src/common/expand/openssl/md/: md.c  md.h
src/common/expand/openssl/sha/: sha.c  sha.h
src/common/expand/uuidgen/: uuidgen.c  uuidgen.h
src/common/interproc/: Makefile  interproc.h  semaphore.c  semaphore.h  sharedmem.c  sharedmem.h
src/diskpart/: diskpart.c  diskpart.h
src/diskpart/datascan/: ExtScan.c  ExtScan.h  FatScan.c  FatScan.h  NtfsScan.c  NtfsScan.h  datascan.c  datascan.h  scanbase.c  scanbase.h
src/diskpart/diskopt/: diskopt.c  diskopt.h  diskrw.c  diskrw.h
src/diskpart/filesys/: fileSys.c  fileSys.h  fsFat32.c  fsFat32.h  fsNtfs.c  fsNtfs.h  libfsntfs.h  ntfs.c
src/diskpart/filesys/libfsntfs/: definitions.h  features.h
src/diskpart/parttable/: dpbase.c  dpbase.h  gptpt.c  gptpt.h  mbrpt.c  mbrpt.h  parttable.c  parttable.h  ptdefs.h
src/network/: network.c  network.h
src/network/communication/: communication.c  communication.h
src/network/communication/tcp/: libtcp.c  libtcp.h
src/network/communication/udp/: libudp.c  libudp.h
src/network/netopt/: netopt.c  netopt.h
